# mupen64plus-ui-python

./: .gitignore  AUTHORS  CHANGELOG  ChangeLog  LICENSES  MANIFEST.in  README  README.md  README.rst  m64py  pyproject.toml  requirements.txt  setup.py
src/SDL/: array.py  dll.py
src/m64py/: archive.py  loader.py  opts.py  platform.py  screensaver.py  utils.py
src/m64py/SDL/: __init__.py  active.py  array.py  audio.py  cdrom.py  darwin.py  dll.py  endian.py  error.py  events.py  image.py  joystick.py  keyboard.py  mixer.py  mouse.py  quit.py  rwops.py  sound.py  timer.py  ttf.py  version.py  video.py
src/m64py/SDL2/: dll.py
src/m64py/core/: config.py  core.py  defs.py  vidext.py
src/m64py/frontend/: cheat.py  dialogs.py  glwidget.py  input.py  joystick.py  keycodes.py  keymap.py  log.py  mainwindow.py  plugin.py  recentfiles.py  rominfo.py  romlist.py  romreader.py  settings.py  view.py  vkwidget.py  worker.py
src/m64py/ui/: about.ui  about_ui.py  archive.ui  archive_ui.py  cheat.ui  cheat_ui.py  choices.ui  choices_ui.py  i18n.qrc  icons.qrc  icons_rc.py  images.qrc  images_rc.py  imageview.py  input.ui  input_ui.py  inputbutton.py  license.ui  license_ui.py  logview.ui  logview_ui.py  mainwindow.ui  mainwindow_ui.py  plugin.ui  plugin_ui.py  pyuicrcc.sh  romlist.ui  romlist_ui.py  settings.ui  settings_ui.py  snapshot.qrc  title.qrc
src/m64py/ui/i18n/: m64py_de_DE.ts  m64py_en.ts
xdg/: application-x-m64py.xml  m64py.desktop  net.sourceforge.m64py.M64Py.desktop  net.sourceforge.m64py.M64Py.metainfo.xml
